# portfolio-admin

./: Dockerfile  README.MD  entrypoint.sh  manage.py  pyproject.toml
.github/workflows/: deploy.yml  develop_daniel-kusy.yml  develop_dkusy-portfolio.yml  develop_portfolio-api-dkusy.yml
apps/portfolio/: admin.py  models.py  models_utils.py  serializers.py  urls.py  views.py
apps/portfolio/migrations/: 0001_initial.py  0002_auto_20210915_1420.py  0002_auto_20210923_1954.py  0003_auto_20210915_1600.py  0003_auto_20210927_1358.py  0004_alter_projectpagesection_unique_together.py  0004_auto_20210927_1510.py  0005_alter_sectionmedia_section.py  0005_auto_20210927_1553.py  0006_auto_20210916_1102.py  0006_websitesettings_document_title.py  0007_remove_websitesettings_document_title.py  0007_socialmedia.py  0008_auto_20210929_1423.py  0009_projecttechnology.py  0010_auto_20210929_1642.py  0011_remove_project_technologies.py  0012_project_technologies.py  0013_alter_project_technologies.py  0014_alter_project_technologies.py  0015_alter_project_technologies.py
portfolio_admin/: asgi.py  backend.py  settings.py  urls.py  wsgi.py
